S04 ex8 con muchas dudas

--- a/S04_3_exercises_after.ipynb
+++ b/S04_3_exercises_after.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
      "output_type": "stream",
      "text": [
       "rule\n",
-      "['Alquiler', 'de', 'coche', '\\n', 'Buenas', 'tarde', ',', 'ser', 'Alba', '.', 'haber', 'alquilar', 'uno', 'coche', 'para', 'el', 'próximo', 'fin', 'de', 'semana', 'y', 'yo', 'gustar', 'saber', 'dónde', 'deber', 'recoger él', '.', 'yo', 'vivir', 'en', 'Barcelona', '.', '\\n', 'Buenas', 'tarde', 'Alba', ',', 'mucho', 'gracia', 'por', 'llamar', '.', 'yo', 'vivir', 'en', 'uno', 'pueblo', 'a', '20', 'minuto', 'de', 'Barcelona', '.', '¿', 'Crees', 'que', 'podría', 'venir', 'a', 'recoger él', 'el', 'viernes', '?', '\\n', 'depender', 'de', 'a', 'qué', 'hora', 'ya', 'que', 'el', 'viernes', 'trabajo', '.', '\\n', 'yo', 'venir', 'bien', 'entre', 'el', '17.00h', 'y', 'el', '19.00h', '.', '¿', 'cómo', 'él', 'tener', '?', '\\n', 'él', 'tener', 'complicado', ',', 'acabar', 'de', 'trabajar', 'a', 'el', '18.30', 'y', 'creer', 'que', 'no', 'yo', 'dar', 'tiempo', '.', '¿', 'cómo', 'tú', 'ir', 'el', 'sábado', 'a', 'primero', 'hora', '?', '\\n', 'si', 'viniés', 'antes', 'de', 'el', '9.00h', 'yo', 'venir', 'bien', '.', '\\n', 'pues', 'si', 'tú', 'parecer', 'bien', ',', 'tú', 'avisar', 'cuando', 'salir', 'de', 'Barcelona', ',', 'sobre', 'el', '8.00h', ',', 'así', 'cuando', 'llegues', 'ya', 'estar', 'todo', 'listo', '.', '\\n', 'Genial', 'Alba', ',', 'quedar', 'así', ',', 'tú', 'esperar', 'el', 'sábado', 'antes', 'de', 'el', '9.00h', '.']\n"
+      "['alquiler', 'de', 'coche', 'buena', 'tarde', ' ', 'ser', 'alba', ' ', 'haber', 'alquilar', 'uno', 'coche', 'para', 'el', 'próximo', 'fin', 'de', 'semana', 'y', 'yo', 'gustar', 'saber', 'dónde', 'deber', 'recoger él', ' ', 'yo', 'vivir', 'en', 'barcelona', ' ', 'buena', 'tarde', 'albar', ' ', 'mucho', 'gracia', 'por', 'llamar', ' ', 'yo', 'vivir', 'en', 'uno', 'pueblo', 'a', '20', 'minuto', 'de', 'barcelona', '  ', 'crees', 'que', 'podría', 'venir', 'a', 'recoger él', 'el', 'viernes', ' ', 'depender', 'de', 'a', 'qué', 'hora', 'ya', 'que', 'el', 'viernes', 'trabajo', ' ', 'yo', 'venir', 'bien', 'entre', 'el', '17', '00h', 'y', 'el', '19', '00h', '  ', 'cómo', 'él', 'tener', ' ', 'él', 'tener', 'complicado', ' ', 'acabar', 'de', 'trabajar', 'a', 'el', '18', '30', 'y', 'creer', 'que', 'no', 'yo', 'dar', 'tiempo', '  ', 'cómo', 'tú', 'ir', 'el', 'sábado', 'a', 'primero', 'hora', ' ', 'si', 'viniés', 'antes', 'de', 'el', '9', '00h', 'yo', 'venir', 'bien', ' ', 'pues', 'si', 'tú', 'parecer', 'bien', ' ', 'tú', 'avisar', 'cuando', 'salir', 'de', 'barcelona', ' ', 'sobre', 'el', '8', '00h', ' ', 'así', 'cuando', 'llegues', 'ya', 'estar', 'todo', 'listo', ' ', 'genial', 'alba', ' ', 'quedar', 'así', ' ', 'tú', 'esperar', 'el', 'sábado', 'antes', 'de', 'el', '9', '00h']\n"
      ]
     }
    ],
@@ -169,13 +169,13 @@
     "lemmatizer = nlp.get_pipe(\"lemmatizer\")\n",
     "print(lemmatizer.mode)\n",
     "\n",
-    "lemmatizetext = nlp(text)\n",
+    "lemmatizetext = nlp(clean_text)\n",
     "print([token.lemma_ for token in lemmatizetext])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -216,9 +216,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "barcelona LOC\n",
+      "alba LOC\n",
+      "barcelona LOC\n",
+      "qué hora PER\n",
+      "barcelona LOC\n"
+     ]
+    }
+   ],
    "source": [
-    "#8\n"
+    "#8\n",
+    "nlp = spacy.load('es_core_news_sm')\n",
+    "doc = nlp(clean_text)\n",
+    "\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)\n",
+    "#??????????????????????????"
    ]
   }
  ],
