--- a/S02_1_exercises_before.ipynb
+++ b/S02_1_exercises_before.ipynb
@@ -20,9 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 35\u001b[0m\n\u001b[0;32m     31\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 35\u001b[0m make_plurals \u001b[38;5;241m=\u001b[39m {nouns: plurals(noun) \u001b[38;5;28;01mfor\u001b[39;00m noun \u001b[38;5;129;01min\u001b[39;00m nouns}\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(make_plurals)\n",
+      "Cell \u001b[1;32mIn[13], line 35\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     31\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 35\u001b[0m make_plurals \u001b[38;5;241m=\u001b[39m {nouns: plurals(noun) \u001b[38;5;28;01mfor\u001b[39;00m noun \u001b[38;5;129;01min\u001b[39;00m nouns}\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(make_plurals)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1: Make Plurals\n",
     "# Write a program to generate plural forms of English nouns from a given list of singular nouns.\n",
@@ -33,7 +46,34 @@
     "# 4. Add 'es' to words ending in 's', 'x', 'z', 'ch', or 'sh' (e.g., \"box\" -> \"boxes\").\n",
     "# 5. For irregular nouns, handle exceptions (e.g., \"child\" -> \"children\", \"man\" -> \"men\").\n",
     "\n",
-    "nouns = [\"cat\", \"baby\", \"wolf\", \"box\", \"child\", \"man\", \"mouse\", \"knife\", \"bush\"]\n"
+    "nouns = [\"cat\", \"baby\", \"wolf\", \"box\", \"child\", \"man\", \"mouse\", \"knife\", \"bush\"]\n",
+    "\n",
+    "def plurals(noun):\n",
+    "    exceptions={\n",
+    "    'child':'children',\n",
+    "    'man':'men',\n",
+    "    'mouse':'mice'}\n",
+    "    \n",
+    "    if noun in exceptions:\n",
+    "        return exceptions[noun]\n",
+    "    \n",
+    "    if noun.endswith('y') and noun[:-2] not in 'aeiou':\n",
+    "        return noun[:-1] + 'ies'\n",
+    "    \n",
+    "    if noun.endswith ('f'):\n",
+    "        return noun[:-1] + 'ves'\n",
+    "    \n",
+    "    if noun .endswith('fe'):\n",
+    "        return noun[:-2] + 'ves'\n",
+    "    \n",
+    "    if noun .endswith(('s','x','z','ch','sh')):\n",
+    "        return noun + 'es'\n",
+    "    \n",
+    "    return noun + 's'\n",
+    "\n",
+    "make_plurals = {nouns: plurals(noun) for noun in nouns}\n",
+    "print(make_plurals)\n",
+    "    "
    ]
   },
   {
