--- a/S02_1_exercises_before.ipynb
+++ b/S02_1_exercises_before.ipynb
@@ -20,19 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 35\u001b[0m\n\u001b[0;32m     31\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 35\u001b[0m make_plurals \u001b[38;5;241m=\u001b[39m {nouns: plurals(noun) \u001b[38;5;28;01mfor\u001b[39;00m noun \u001b[38;5;129;01min\u001b[39;00m nouns}\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(make_plurals)\n",
-      "Cell \u001b[1;32mIn[13], line 35\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     31\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mes\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m noun \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 35\u001b[0m make_plurals \u001b[38;5;241m=\u001b[39m {nouns: plurals(noun) \u001b[38;5;28;01mfor\u001b[39;00m noun \u001b[38;5;129;01min\u001b[39;00m nouns}\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(make_plurals)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cat': 'cats', 'baby': 'babies', 'wolf': 'wolves', 'box': 'boxes', 'child': 'children', 'man': 'men', 'mouse': 'mice', 'knife': 'knives', 'bush': 'bushes'}\n"
      ]
     }
    ],
@@ -63,15 +58,15 @@
     "    if noun.endswith ('f'):\n",
     "        return noun[:-1] + 'ves'\n",
     "    \n",
-    "    if noun .endswith('fe'):\n",
+    "    if noun.endswith('fe'):\n",
     "        return noun[:-2] + 'ves'\n",
     "    \n",
-    "    if noun .endswith(('s','x','z','ch','sh')):\n",
+    "    if noun.endswith(('s','x','z','ch','sh')):\n",
     "        return noun + 'es'\n",
     "    \n",
     "    return noun + 's'\n",
     "\n",
-    "make_plurals = {nouns: plurals(noun) for noun in nouns}\n",
+    "make_plurals = {noun: plurals(noun) for noun in nouns}\n",
     "print(make_plurals)\n",
     "    "
    ]
