--- a/S02_1_exercises_before.ipynb
+++ b/S02_1_exercises_before.ipynb
@@ -73,13 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['support@example.com', 'sales@example.org', 'admin123@example.net']\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2: Extract Email Addresses\n",
     "# Write a Python program to extract all email addresses from the following string.\n",
-    "text = \"Please contact us at support@example.com, sales@example.org, or admin123@example.net for assistance.\""
+    "text = \"Please contact us at support@example.com, sales@example.org, or admin123@example.net for assistance.\"\n",
+    "pattern = r'\\b\\w+@\\w+\\.\\w+\\b'\n",
+    "matches = re.findall(pattern, text)\n",
+    "print(matches)"
    ]
   },
   {
