--- a/S02_1_exercises_before.ipynb
+++ b/S02_1_exercises_before.ipynb
@@ -95,14 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' #sunset ', ' #beach!']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Exercise 3: Extract Hashtags\n",
     "# From a tweet, extract all valid hashtags.\n",
-    "tweet = \"Loving the #sunset at the #beach! But #123abc and ##double are #invalid#tags.\""
+    "tweet = \"Loving the #sunset at the #beach! But #123abc and ##double are #invalid#tags.\"\n",
+    "pattern = r'^#[a-zA-Z]+[\\!|\\?|\\s\\.]|\\s#[a-zA-Z]+[\\!|\\?|\\s\\.]'\n",
+    "matches = re.findall(pattern, tweet)\n",
+    "print(matches)"
    ]
   }
  ],
