--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -64,6 +64,53 @@
     "\n",
     "print(splitsentence)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "<>:5: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "C:\\Users\\manue\\AppData\\Local\\Temp\\ipykernel_11076\\3521223954.py:5: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "  numsub= re.sub(npatern, npatern*100[:1]+'cm', sub)\n",
+      "C:\\Users\\manue\\AppData\\Local\\Temp\\ipykernel_11076\\3521223954.py:5: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "  numsub= re.sub(npatern, npatern*100[:1]+'cm', sub)\n",
+      "C:\\Users\\manue\\AppData\\Local\\Temp\\ipykernel_11076\\3521223954.py:5: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "  numsub= re.sub(npatern, npatern*100[:1]+'cm', sub)\n",
+      "C:\\Users\\manue\\AppData\\Local\\Temp\\ipykernel_11076\\3521223954.py:5: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "  numsub= re.sub(npatern, npatern*100[:1]+'cm', sub)\n",
+      "C:\\Users\\manue\\AppData\\Local\\Temp\\ipykernel_11076\\3521223954.py:5: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "  numsub= re.sub(npatern, npatern*100[:1]+'cm', sub)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m npatern\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mdm\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      4\u001b[0m sub\u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(patern, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUSA\u001b[39m\u001b[38;5;124m'\u001b[39m, text)\n\u001b[1;32m----> 5\u001b[0m numsub\u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(npatern, npatern\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m[:\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcm\u001b[39m\u001b[38;5;124m'\u001b[39m, sub)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(sub)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "patern= r'\\bU\\.S\\.A\\b'\n",
+    "npatern= r'\\d\\.\\dm'\n",
+    "sub= re.sub(patern, 'USA', text)\n",
+    "if npatern:\n",
+    "    return npatern\n",
+    "    \n",
+    "numsub= re.sub(npatern, npatern*100[:1]+'cm', sub)\n",
+    "print(sub)"
+   ]
   }
  ],
  "metadata": {
