Problemas con el for ex2

--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +71,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'alltext' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m     right_word \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(num_to_words[r] \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m right)\n\u001b[0;32m     23\u001b[0m     alltext \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m$\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mleft\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mright\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m billion\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mleft_word\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m point \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mright_word\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m billion\u001b[39m\u001b[38;5;124m'\u001b[39m, ntext)\n\u001b[1;32m---> 25\u001b[0m \u001b[38;5;28mprint\u001b[39m(alltext)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'alltext' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The president of the USA., Donald Trump, is 190 centimeters high and 78 years old. Forbes Magazine has assessed his wealth, currently estimating it at $5.5 billion as of mid-February 2025.\n"
      ]
     }
    ],
@@ -87,7 +83,7 @@
     "patern= r'\\bU\\.S\\.A\\b'\n",
     "npatern= r'(\\d+)\\.(\\d+)m'\n",
     "mpatern= r'(\\d+)\\.(\\d+)billion'\n",
-    "sub= re.sub(patern, 'USA', text)\n",
+    "text= re.sub(patern, 'USA', text)\n",
     "numbers= re.findall(npatern, text)\n",
     "moneys= re.findall(mpatern, text)\n",
     "num_to_words = {\n",
@@ -98,17 +94,17 @@
     "    meters = int(number[0])\n",
     "    decimeters = int(number[1])\n",
     "    total_cm = meters * 100  + decimeters*10\n",
-    "    ntext = re.sub(f'{meters}\\.{decimeters}m', f'{total_cm} centimeters', sub)\n",
+    "    text = re.sub(f'{meters}\\.{decimeters}m', f'{total_cm} centimeters', text)\n",
     "    \n",
     "for money in moneys:\n",
     "    left = money[0]\n",
     "    right = money[1]\n",
     "    left_word = ' '.join(num_to_words[l] for l in left)\n",
     "    right_word = ' '.join(num_to_words[r] for r in right)\n",
-    "    alltext = re.sub(f'\\${left}\\.{right} billion', f'{left_word} point {right_word} billion', ntext)\n",
+    "    text = re.sub(f'\\${left}\\.{right} billion', f'{left_word} point {right_word} billion', text)\n",
+    "    \n",
     "\n",
-    "print(alltext)\n",
-    "\n"
+    "print(text)\n"
    ]
   }
  ],
