Arreglo y fin ex2

--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The president of the USA., Donald Trump, is 190 centimeters high and 78 years old. Forbes Magazine has assessed his wealth, currently estimating it at $5.5 billion as of mid-February 2025.\n"
+      "The president of the USA., Donald Trump, is 190 centimeters high and 78 years old. Forbes Magazine has assessed his wealth, currently estimating it at five point five billion as of mid-February 2025.\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
     "#2\n",
     "patern= r'\\bU\\.S\\.A\\b'\n",
     "npatern= r'(\\d+)\\.(\\d+)m'\n",
-    "mpatern= r'(\\d+)\\.(\\d+)billion'\n",
+    "mpatern= r'\\$(\\d+)\\.(\\d+) billion'\n",
     "text= re.sub(patern, 'USA', text)\n",
     "numbers= re.findall(npatern, text)\n",
     "moneys= re.findall(mpatern, text)\n",
