--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -105,6 +105,46 @@
     "    \n",
     "\n",
     "print(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The president of the USA ., Donald_Trump , is 190 centimeters high and 78 years old. Forbes_Magazine has assessed his wealth, currently estimating it at five point five billion as of mid-February 2025.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3\n",
+    "def preserve_proper_nouns(text):\n",
+    "    words = re.findall(r\"\\b[A-Z][a-z]*\\b|\\b[A-Z]+\\b|[\\w$.,!?-]+\", text)  \n",
+    "    result = []\n",
+    "    temp_proper_noun = []\n",
+    "\n",
+    "    for i, word in enumerate(words):\n",
+    "        if word[0].isupper() and word.isalpha(): \n",
+    "            temp_proper_noun.append(word)  \n",
+    "        else:\n",
+    "            if temp_proper_noun:\n",
+    "                result.append(\"_\".join(temp_proper_noun))  \n",
+    "                temp_proper_noun = []  \n",
+    "            result.append(word.lower() if word.isalpha() else word) \n",
+    "\n",
+    "    if temp_proper_noun:\n",
+    "        result.append(\"_\".join(temp_proper_noun))\n",
+    "\n",
+    "    return \" \".join(result)\n",
+    "\n",
+    "converted_text = preserve_proper_nouns(text)\n",
+    "print(converted_text)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
