--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -146,6 +146,25 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'president', 'of', 'the', 'USA.', ',', 'Donald', 'Trump', ',', 'is', '190', 'centimeters', 'high', 'and', '78', 'years', 'old', '.', 'Forbes', 'Magazine', 'has', 'assessed', 'his', 'wealth', ',', 'currently', 'estimating', 'it', 'at', 'five', 'point', 'five', 'billion', 'as', 'of', 'mid-February', '2025', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4\n",
+    "nltk_tokens = nltk.word_tokenize(text)\n",
+    "print(nltk_tokens)"
+   ]
   }
  ],
  "metadata": {
