--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -165,6 +165,41 @@
     "nltk_tokens = nltk.word_tokenize(text)\n",
     "print(nltk_tokens)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "president USA. , Donald Trump , 190 centimeters high 78 years old . Forbes Magazine assessed wealth , currently estimating five point five billion mid-February 2025 .\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "filtered_tokens = [word for word in nltk_tokens if word.lower() not in stop_words]\n",
+    "filtered_text = ' '.join(filtered_tokens)\n",
+    "\n",
+    "print(filtered_text)"
+   ]
   }
  ],
  "metadata": {
