--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -200,6 +200,29 @@
     "\n",
     "print(filtered_text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('The', 'president'), ('president', 'of'), ('of', 'the'), ('the', 'USA.,'), ('USA.,', 'Donald'), ('Donald', 'Trump,'), ('Trump,', 'is'), ('is', '190'), ('190', 'centimeters'), ('centimeters', 'high'), ('high', 'and'), ('and', '78'), ('78', 'years'), ('years', 'old.'), ('old.', 'Forbes'), ('Forbes', 'Magazine'), ('Magazine', 'has'), ('has', 'assessed'), ('assessed', 'his'), ('his', 'wealth,'), ('wealth,', 'currently'), ('currently', 'estimating'), ('estimating', 'it'), ('it', 'at'), ('at', 'five'), ('five', 'point'), ('point', 'five'), ('five', 'billion'), ('billion', 'as'), ('as', 'of'), ('of', 'mid-February'), ('mid-February', '2025.')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6\n",
+    "words = text.split()\n",
+    "bigrams = []\n",
+    "for i in range(len(words) - 1):\n",
+    "    bigrams.append((words[i], words[i + 1]))\n",
+    "\n",
+    "print(bigrams)"
+   ]
   }
  ],
  "metadata": {
