--- a/S06_0_lab_exercise.ipynb
+++ b/S06_0_lab_exercise.ipynb
@@ -223,6 +223,57 @@
     "\n",
     "print(bigrams)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Next word after 'Donald': Trump,\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7\n",
+    "#First we calculate the frecuency of each bigram\n",
+    "bigram_freq = {}\n",
+    "for bigram in bigrams:\n",
+    "    if bigram in bigram_freq:\n",
+    "        bigram_freq[bigram] += 1\n",
+    "    else:\n",
+    "        bigram_freq[bigram] = 1\n",
+    "#Then the frecuency of each unigram\n",
+    "unigram_freq = {}\n",
+    "for word in words:\n",
+    "    if word in unigram_freq:\n",
+    "        unigram_freq[word] += 1\n",
+    "    else:\n",
+    "        unigram_freq[word] = 1\n",
+    "#With this both calculations we can calculate the probability of the bigrams based on the frecuency of the bigrams and unigrams\n",
+    "bigram_probabilities = {}\n",
+    "for bigram in bigram_freq:\n",
+    "    first_word = bigram[0]\n",
+    "    bigram_probabilities[bigram] = bigram_freq[bigram] / unigram_freq[first_word]\n",
+    "#Now we can raise a presiction based on this probability and the word given\n",
+    "def predict_next_word(current_word):\n",
+    "    #we filter the bigram that start with the word given so we can make a accurate prediction\n",
+    "    possible_bigrams = {bigram: prob for bigram, prob in bigram_probabilities.items() if bigram[0] == current_word}\n",
+    "    \n",
+    "    if not possible_bigrams:\n",
+    "        return None\n",
+    "    \n",
+    "    next_bigram = max(possible_bigrams, key=possible_bigrams.get)\n",
+    "    \n",
+    "    return next_bigram[1]\n",
+    "\n",
+    "current_word = \"Donald\"\n",
+    "predicted_word = predict_next_word(current_word)\n",
+    "print(f\"Next word after '{current_word}': {predicted_word}\")\n"
+   ]
   }
  ],
  "metadata": {
