--- a/S06_1_exercises_before.ipynb
+++ b/S06_1_exercises_before.ipynb
@@ -12,18 +12,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2270414378.py, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 20\u001b[1;36m\u001b[0m\n\u001b[1;33m    for token:\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "corpus = [\n",
+    "    (\"Today was a great day.\", \"positive\")\n",
+    "    \"Tomorrow will be raining all the day, I am sad.\",\n",
+    "    \"Next week is my birthday, I am excited.\",\n",
+    "    \"I lost the train this morning so that is why I got late.\"\n",
+    "]\n",
+    "\n",
+    "Positive= ['great','birthday','excited']\n",
+    "Negative= ['sad', 'lost', 'late']\n",
+    "\n",
+    "pattern = r'\\b\\w+\\b'\n",
+    "token = re.findall(pattern, corpus.lower())\n",
+    "\n",
+    "totalpos = Counter()\n",
+    "totalneg = Counter()\n",
+    "\n",
+    "for sentence in corpus:\n",
+    "    for token in tokens:\n",
+    "    if token in Positive:\n",
+    "        totalpos[token] +=1\n",
+    "    if token in Negative:\n",
+    "        totalneg[token] +=1\n",
+    "\n",
+    "print(totalpos, totalneg)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
