--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -24,7 +24,7 @@
      "text": [
       "[nltk_data] Downloading package movie_reviews to\n",
       "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\movie_reviews.zip.\n",
+      "[nltk_data]   Package movie_reviews is already up-to-date!\n",
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
@@ -32,7 +32,8 @@
       "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     C:\\Users\\manue\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     },
     {
@@ -41,32 +42,32 @@
      "text": [
       "\n",
       "Naive Bayes Classifier Evaluation:\n",
-      "Accuracy: 71.25%\n",
+      "Accuracy: 69.25%\n",
       "Most Informative Features\n",
-      "               insulting = True              neg : pos    =     12.8 : 1.0\n",
-      "             beautifully = True              pos : neg    =     12.8 : 1.0\n",
-      "                   anger = True              pos : neg    =     11.9 : 1.0\n",
-      "             outstanding = True              pos : neg    =     11.6 : 1.0\n",
-      "              astounding = True              pos : neg    =     11.1 : 1.0\n",
-      "                 idiotic = True              neg : pos    =     10.9 : 1.0\n",
-      "                 insipid = True              neg : pos    =     10.9 : 1.0\n",
-      "                  avoids = True              pos : neg    =     10.5 : 1.0\n",
-      "                  hatred = True              pos : neg    =     10.5 : 1.0\n",
-      "             mcconaughey = True              pos : neg    =     10.5 : 1.0\n",
+      "               uplifting = True              pos : neg    =     13.9 : 1.0\n",
+      "             outstanding = True              pos : neg    =     13.2 : 1.0\n",
+      "                  avoids = True              pos : neg    =     11.9 : 1.0\n",
+      "               affecting = True              pos : neg    =     11.2 : 1.0\n",
+      "            construction = True              pos : neg    =     11.2 : 1.0\n",
+      "                   warns = True              pos : neg    =     10.5 : 1.0\n",
+      "               atrocious = True              neg : pos    =     10.2 : 1.0\n",
+      "                  seagal = True              neg : pos    =     10.2 : 1.0\n",
+      "              astounding = True              pos : neg    =      9.8 : 1.0\n",
+      "               ludicrous = True              neg : pos    =      9.7 : 1.0\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         neg       0.94      0.44      0.60       195\n",
-      "         pos       0.65      0.98      0.78       205\n",
+      "         neg       0.97      0.37      0.54       193\n",
+      "         pos       0.63      0.99      0.77       207\n",
       "\n",
-      "    accuracy                           0.71       400\n",
-      "   macro avg       0.79      0.71      0.69       400\n",
-      "weighted avg       0.79      0.71      0.69       400\n",
+      "    accuracy                           0.69       400\n",
+      "   macro avg       0.80      0.68      0.65       400\n",
+      "weighted avg       0.79      0.69      0.66       400\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[ 85 110]\n",
-      " [  5 200]]\n",
+      "[[ 72 121]\n",
+      " [  2 205]]\n",
       "\n",
       "VADER Sentiment Analysis:\n",
       "Sentence: I absolutely loved this movie! The acting was fantastic.\n",
@@ -171,7 +172,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gold_standard = [\n",
+    "    (\"Today is a great day.\", \"positive\"),\n",
+    "    (\"I don't like this movie.\", \"negative\"),\n",
+    "    (\"This was the best day ever.\", \"positive\"),\n",
+    "    (\"He is behaving worse than ever.\", \"negative\"),\n",
+    "    (\"This was an amazing story, where did you learn it?\", \"positive\"),\n",
+    "    (\"He is the worst person I know.\", \"negative\"),\n",
+    "    (\"Have a good day.\", \"positive\"),\n",
+    "    (\"What a bad day, it's raining.\", \"negative\"),\n",
+    "    (\"I love the rain.\", \"positive\"),\n",
+    "    (\"Not worth your time.\", \"negative\")\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
