S06 ex after test train

--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -184,7 +184,15 @@
     "    (\"What a bad day, it's raining.\", \"negative\"),\n",
     "    (\"I love the rain.\", \"positive\"),\n",
     "    (\"Not worth your time.\", \"negative\")\n",
-    "]"
+    "]\n",
+    "\n",
+    "feature_sets = [(extract_features(word_tokenize(sentence)), label) for (sentence, label) in gold_standard]\n",
+    "\n",
+    "test_set = feature_sets\n",
+    "\n",
+    "y_true = [label for (_, label) in test_set]\n",
+    "y_pred = [classifier.classify(features) for (features, _) in test_set]\n",
+    "\n"
    ]
   }
  ],
