S06 ex after manually measures

--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -192,7 +192,29 @@
     "\n",
     "y_true = [label for (_, label) in test_set]\n",
     "y_pred = [classifier.classify(features) for (features, _) in test_set]\n",
-    "\n"
+    "\n",
+    "#Manually\n",
+    "true_positives = 0\n",
+    "false_positives = 0\n",
+    "false_negatives = 0\n",
+    "\n",
+    "for true_label, pred_label in zip(y_true, y_pred):\n",
+    "    if true_label == \"positive\" and pred_label == \"positive\":\n",
+    "        true_positives += 1\n",
+    "    elif true_label == \"negative\" and pred_label == \"positive\":\n",
+    "        false_positives += 1\n",
+    "    elif true_label == \"positive\" and pred_label == \"negative\":\n",
+    "        false_negatives += 1\n",
+    "\n",
+    "precission = true_positives / (true_positives + false_positives)\n",
+    "\n",
+    "recall = true_positives / (true_positives + false_negatives)\n",
+    "\n",
+    "f1 = 2 * (precission * recall) / (precission + recall)\n",
+    "\n",
+    "print(f\"Precision manually: {precission:.2f}\")\n",
+    "print(f\"Recall manually: {recall:.2f}\")\n",
+    "print(f\"F1 manually: {f1:.2f}\")"
    ]
   }
  ],
