S06 ex after skit measures

--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -173,6 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "\n",
     "gold_standard = [\n",
     "    (\"Today is a great day.\", \"positive\"),\n",
     "    (\"I don't like this movie.\", \"negative\"),\n",
@@ -212,9 +214,18 @@
     "\n",
     "f1 = 2 * (precission * recall) / (precission + recall)\n",
     "\n",
-    "print(f\"Precision manually: {precission:.2f}\")\n",
+    "print(f\"Precission manually: {precission:.2f}\")\n",
     "print(f\"Recall manually: {recall:.2f}\")\n",
-    "print(f\"F1 manually: {f1:.2f}\")"
+    "print(f\"F1 manually: {f1:.2f}\")\n",
+    "\n",
+    "#Scikit-learn\n",
+    "precission = precision_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "recall = recall_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "f1 = f1_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "\n",
+    "print(f\"Precission sccikit: {precission:.2f}\")\n",
+    "print(f\"Recall scikit: {recall:.2f}\")\n",
+    "print(f\"F1 scikit: {f1:.2f}\")"
    ]
   }
  ],
