--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,32 +42,32 @@
      "text": [
       "\n",
       "Naive Bayes Classifier Evaluation:\n",
-      "Accuracy: 69.25%\n",
+      "Accuracy: 73.00%\n",
       "Most Informative Features\n",
-      "               uplifting = True              pos : neg    =     13.9 : 1.0\n",
-      "             outstanding = True              pos : neg    =     13.2 : 1.0\n",
-      "                  avoids = True              pos : neg    =     11.9 : 1.0\n",
-      "               affecting = True              pos : neg    =     11.2 : 1.0\n",
-      "            construction = True              pos : neg    =     11.2 : 1.0\n",
-      "                   warns = True              pos : neg    =     10.5 : 1.0\n",
-      "               atrocious = True              neg : pos    =     10.2 : 1.0\n",
-      "                  seagal = True              neg : pos    =     10.2 : 1.0\n",
-      "              astounding = True              pos : neg    =      9.8 : 1.0\n",
-      "               ludicrous = True              neg : pos    =      9.7 : 1.0\n",
+      "             outstanding = True              pos : neg    =     15.2 : 1.0\n",
+      "                  finest = True              pos : neg    =     13.8 : 1.0\n",
+      "                chilling = True              pos : neg    =     12.7 : 1.0\n",
+      "               ludicrous = True              neg : pos    =     12.2 : 1.0\n",
+      "               affecting = True              pos : neg    =     12.0 : 1.0\n",
+      "                  seagal = True              neg : pos    =     11.3 : 1.0\n",
+      "                 idiotic = True              neg : pos    =     11.1 : 1.0\n",
+      "                 insipid = True              neg : pos    =     10.7 : 1.0\n",
+      "                  avoids = True              pos : neg    =     10.6 : 1.0\n",
+      "                palpable = True              pos : neg    =     10.0 : 1.0\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         neg       0.97      0.37      0.54       193\n",
-      "         pos       0.63      0.99      0.77       207\n",
+      "         neg       0.93      0.46      0.62       188\n",
+      "         pos       0.67      0.97      0.79       212\n",
       "\n",
-      "    accuracy                           0.69       400\n",
-      "   macro avg       0.80      0.68      0.65       400\n",
-      "weighted avg       0.79      0.69      0.66       400\n",
+      "    accuracy                           0.73       400\n",
+      "   macro avg       0.80      0.71      0.70       400\n",
+      "weighted avg       0.79      0.73      0.71       400\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[ 72 121]\n",
-      " [  2 205]]\n",
+      "[[ 87 101]\n",
+      " [  7 205]]\n",
       "\n",
       "VADER Sentiment Analysis:\n",
       "Sentence: I absolutely loved this movie! The acting was fantastic.\n",
@@ -169,9 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 36\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m true_label \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpositive\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m pred_label \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnegative\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     34\u001b[0m         false_negatives \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 36\u001b[0m precission \u001b[38;5;241m=\u001b[39m true_positives \u001b[38;5;241m/\u001b[39m (true_positives \u001b[38;5;241m+\u001b[39m false_positives)\n\u001b[0;32m     38\u001b[0m recall \u001b[38;5;241m=\u001b[39m true_positives \u001b[38;5;241m/\u001b[39m (true_positives \u001b[38;5;241m+\u001b[39m false_negatives)\n\u001b[0;32m     40\u001b[0m f1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m (precission \u001b[38;5;241m*\u001b[39m recall) \u001b[38;5;241m/\u001b[39m (precission \u001b[38;5;241m+\u001b[39m recall)\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "\n",
