--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,24 +220,28 @@
     "    elif true_label == \"positive\" and pred_label == \"negative\":\n",
     "        false_negatives += 1\n",
     "\n",
-    "precission = true_positives / (true_positives + false_positives)\n",
+    "print(true_positives)\n",
+    "print(false_negatives)\n",
     "\n",
-    "recall = true_positives / (true_positives + false_negatives)\n",
     "\n",
-    "f1 = 2 * (precission * recall) / (precission + recall)\n",
+    "#precission = true_positives / (true_positives + false_positives)\n",
     "\n",
-    "print(f\"Precission manually: {precission:.2f}\")\n",
-    "print(f\"Recall manually: {recall:.2f}\")\n",
-    "print(f\"F1 manually: {f1:.2f}\")\n",
-    "\n",
-    "#Scikit-learn\n",
-    "precission = precision_score(y_true, y_pred, pos_label=\"positive\")\n",
-    "recall = recall_score(y_true, y_pred, pos_label=\"positive\")\n",
-    "f1 = f1_score(y_true, y_pred, pos_label=\"positive\")\n",
-    "\n",
-    "print(f\"Precission sccikit: {precission:.2f}\")\n",
-    "print(f\"Recall scikit: {recall:.2f}\")\n",
-    "print(f\"F1 scikit: {f1:.2f}\")"
+    "#recall = true_positives / (true_positives + false_negatives)\n",
+    "#\n",
+    "#f1 = 2 * (precission * recall) / (precission + recall)\n",
+    "#\n",
+    "#print(f\"Precission manually: {precission:.2f}\")\n",
+    "#print(f\"Recall manually: {recall:.2f}\")\n",
+    "#print(f\"F1 manually: {f1:.2f}\")\n",
+    "#\n",
+    "##Scikit-learn\n",
+    "#precission = precision_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "#recall = recall_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "#f1 = f1_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "#\n",
+    "#print(f\"Precission sccikit: {precission:.2f}\")\n",
+    "#print(f\"Recall scikit: {recall:.2f}\")\n",
+    "#print(f\"F1 scikit: {f1:.2f}\")"
    ]
   }
  ],
