--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -173,14 +173,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 36\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m true_label \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpositive\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m pred_label \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnegative\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     34\u001b[0m         false_negatives \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 36\u001b[0m precission \u001b[38;5;241m=\u001b[39m true_positives \u001b[38;5;241m/\u001b[39m (true_positives \u001b[38;5;241m+\u001b[39m false_positives)\n\u001b[0;32m     38\u001b[0m recall \u001b[38;5;241m=\u001b[39m true_positives \u001b[38;5;241m/\u001b[39m (true_positives \u001b[38;5;241m+\u001b[39m false_negatives)\n\u001b[0;32m     40\u001b[0m f1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m (precission \u001b[38;5;241m*\u001b[39m recall) \u001b[38;5;241m/\u001b[39m (precission \u001b[38;5;241m+\u001b[39m recall)\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
      ]
     }
    ],
@@ -202,7 +199,8 @@
     "\n",
     "feature_sets = [(extract_features(word_tokenize(sentence)), label) for (sentence, label) in gold_standard]\n",
     "\n",
-    "test_set = feature_sets\n",
+    "train_size = int(len(feature_sets) * 0.8)\n",
+    "train_set, test_set = feature_sets[:train_size], feature_sets[train_size:]\n",
     "\n",
     "y_true = [label for (_, label) in test_set]\n",
     "y_pred = [classifier.classify(features) for (features, _) in test_set]\n",
