S06 ex after pequeño arreglo pero sigue problema

--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,8 +199,7 @@
     "\n",
     "feature_sets = [(extract_features(word_tokenize(sentence)), label) for (sentence, label) in gold_standard]\n",
     "\n",
-    "train_size = int(len(feature_sets) * 0.8)\n",
-    "train_set, test_set = feature_sets[:train_size], feature_sets[train_size:]\n",
+    "test_set = feature_sets\n",
     "\n",
     "y_true = [label for (_, label) in test_set]\n",
     "y_pred = [classifier.classify(features) for (features, _) in test_set]\n",
@@ -209,6 +208,7 @@
     "true_positives = 0\n",
     "false_positives = 0\n",
     "false_negatives = 0\n",
+    "true_negatives= 0\n",
     "\n",
     "for true_label, pred_label in zip(y_true, y_pred):\n",
     "    if true_label == \"positive\" and pred_label == \"positive\":\n",
@@ -217,7 +217,8 @@
     "        false_positives += 1\n",
     "    elif true_label == \"positive\" and pred_label == \"negative\":\n",
     "        false_negatives += 1\n",
-    "\n",
+    "    elif true_label == \"negative\" and pred_label == \"negative\":\n",
+    "        true_negatives += 1\n",
     "print(true_positives)\n",
     "print(false_negatives)\n",
     "\n",
