S06 ex after error del problema encontrado

--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -169,13 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'negative']\n",
+      "['pos', 'neg', 'pos', 'neg', 'pos', 'neg', 'pos', 'pos', 'neg', 'pos']\n",
       "0\n",
       "0\n"
      ]
@@ -203,6 +205,9 @@
     "\n",
     "y_true = [label for (_, label) in test_set]\n",
     "y_pred = [classifier.classify(features) for (features, _) in test_set]\n",
+    "\n",
+    "print(y_true)\n",
+    "print(y_pred)\n",
     "\n",
     "#Manually\n",
     "true_positives = 0\n",
