S06 ex after problema solucionado

--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,9 +177,9 @@
      "output_type": "stream",
      "text": [
       "['positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'negative']\n",
-      "['pos', 'neg', 'pos', 'neg', 'pos', 'neg', 'pos', 'pos', 'neg', 'pos']\n",
-      "0\n",
-      "0\n"
+      "['positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'positive', 'negative', 'positive']\n",
+      "4\n",
+      "1\n"
      ]
     }
    ],
@@ -205,6 +205,7 @@
     "\n",
     "y_true = [label for (_, label) in test_set]\n",
     "y_pred = [classifier.classify(features) for (features, _) in test_set]\n",
+    "y_pred = [\"positive\" if label == \"pos\" else \"negative\" for label in y_pred]\n",
     "\n",
     "print(y_true)\n",
     "print(y_pred)\n",
