S06 ex after completo

--- a/S06_03_exercises_after.ipynb
+++ b/S06_03_exercises_after.ipynb
@@ -169,17 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'negative']\n",
-      "['positive', 'negative', 'positive', 'negative', 'positive', 'negative', 'positive', 'positive', 'negative', 'positive']\n",
-      "4\n",
-      "1\n"
+      "Precission manually: 0.67\n",
+      "Recall manually: 0.80\n",
+      "F1 manually: 0.73\n",
+      "Precission sccikit: 0.67\n",
+      "Recall scikit: 0.80\n",
+      "F1 scikit: 0.73\n"
      ]
     }
    ],
@@ -207,8 +209,6 @@
     "y_pred = [classifier.classify(features) for (features, _) in test_set]\n",
     "y_pred = [\"positive\" if label == \"pos\" else \"negative\" for label in y_pred]\n",
     "\n",
-    "print(y_true)\n",
-    "print(y_pred)\n",
     "\n",
     "#Manually\n",
     "true_positives = 0\n",
@@ -225,28 +225,25 @@
     "        false_negatives += 1\n",
     "    elif true_label == \"negative\" and pred_label == \"negative\":\n",
     "        true_negatives += 1\n",
-    "print(true_positives)\n",
-    "print(false_negatives)\n",
     "\n",
+    "precission = true_positives / (true_positives + false_positives)\n",
     "\n",
-    "#precission = true_positives / (true_positives + false_positives)\n",
+    "recall = true_positives / (true_positives + false_negatives)\n",
     "\n",
-    "#recall = true_positives / (true_positives + false_negatives)\n",
-    "#\n",
-    "#f1 = 2 * (precission * recall) / (precission + recall)\n",
-    "#\n",
-    "#print(f\"Precission manually: {precission:.2f}\")\n",
-    "#print(f\"Recall manually: {recall:.2f}\")\n",
-    "#print(f\"F1 manually: {f1:.2f}\")\n",
-    "#\n",
-    "##Scikit-learn\n",
-    "#precission = precision_score(y_true, y_pred, pos_label=\"positive\")\n",
-    "#recall = recall_score(y_true, y_pred, pos_label=\"positive\")\n",
-    "#f1 = f1_score(y_true, y_pred, pos_label=\"positive\")\n",
-    "#\n",
-    "#print(f\"Precission sccikit: {precission:.2f}\")\n",
-    "#print(f\"Recall scikit: {recall:.2f}\")\n",
-    "#print(f\"F1 scikit: {f1:.2f}\")"
+    "f1 = 2 * (precission * recall) / (precission + recall)\n",
+    "\n",
+    "print(f\"Precission manually: {precission:.2f}\")\n",
+    "print(f\"Recall manually: {recall:.2f}\")\n",
+    "print(f\"F1 manually: {f1:.2f}\")\n",
+    "\n",
+    "#Scikit-learn\n",
+    "precission = precision_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "recall = recall_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "f1 = f1_score(y_true, y_pred, pos_label=\"positive\")\n",
+    "\n",
+    "print(f\"Precission sccikit: {precission:.2f}\")\n",
+    "print(f\"Recall scikit: {recall:.2f}\")\n",
+    "print(f\"F1 scikit: {f1:.2f}\")"
    ]
   }
  ],
