--- a/S07_1_exercises_before.ipynb
+++ b/S07_1_exercises_before.ipynb
@@ -13,19 +13,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bigrams: [('Natural', 'language'), ('language', 'processing'), ('processing', 'is'), ('is', 'a'), ('a', 'fascinating'), ('fascinating', 'field'), ('field', 'of'), ('of', 'study'), ('study', '.')]\n",
+      "Trigrams: [('Natural', 'language', 'processing'), ('language', 'processing', 'is'), ('processing', 'is', 'a'), ('is', 'a', 'fascinating'), ('a', 'fascinating', 'field'), ('fascinating', 'field', 'of'), ('field', 'of', 'study'), ('of', 'study', '.')]\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.util import ngrams\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "text = \"Natural language processing is a fascinating field of study.\"\n",
+    "\n",
+    "tokens = word_tokenize(text)\n",
+    "\n",
+    "bigrams = list(ngrams(tokens, 2))\n",
+    "\n",
+    "trigrams = list(ngrams(tokens, 3))\n",
+    "\n",
+    "print(\"Bigrams:\", bigrams)\n",
+    "print(\"Trigrams:\", trigrams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
