--- a/S07_1_exercises_before.ipynb
+++ b/S07_1_exercises_before.ipynb
@@ -44,10 +44,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.81\n",
+      "Most Informative Features\n",
+      "        contains(seagal) = True              neg : pos    =     13.3 : 1.0\n",
+      "   contains(outstanding) = True              pos : neg    =     11.1 : 1.0\n",
+      "         contains(mulan) = True              pos : neg    =      8.5 : 1.0\n",
+      "   contains(wonderfully) = True              pos : neg    =      7.7 : 1.0\n",
+      "          contains(lame) = True              neg : pos    =      6.0 : 1.0\n",
+      "         contains(flynt) = True              pos : neg    =      5.8 : 1.0\n",
+      "         contains(damon) = True              pos : neg    =      5.8 : 1.0\n",
+      "         contains(awful) = True              neg : pos    =      5.3 : 1.0\n",
+      "        contains(wasted) = True              neg : pos    =      5.3 : 1.0\n",
+      "    contains(ridiculous) = True              neg : pos    =      5.0 : 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import movie_reviews\n",
+    "from nltk.classify import NaiveBayesClassifier\n",
+    "from nltk.classify.util import accuracy\n",
+    "import random\n",
+    "\n",
+    "documents = [(list(movie_reviews.words(fileid)), category)\n",
+    "             for category in movie_reviews.categories()\n",
+    "             for fileid in movie_reviews.fileids(category)]\n",
+    "random.shuffle(documents)\n",
+    "\n",
+    "all_words = nltk.FreqDist(w.lower() for w in movie_reviews.words())\n",
+    "word_features = list(all_words)[:2000] \n",
+    "\n",
+    "def document_features(document):\n",
+    "    document_words = set(document)\n",
+    "    features = {}\n",
+    "    for word in word_features:\n",
+    "        features[f'contains({word})'] = (word in document_words)\n",
+    "    return features\n",
+    "\n",
+    "featuresets = [(document_features(d), c) for (d, c) in documents]\n",
+    "\n",
+    "train_set, test_set = featuresets[100:], featuresets[:100]\n",
+    "\n",
+    "classifier = NaiveBayesClassifier.train(train_set)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy(classifier, test_set))\n",
+    "\n",
+    "classifier.show_most_informative_features(10)"
+   ]
   }
  ],
  "metadata": {
