--- a/S07_1_exercises_before.ipynb
+++ b/S07_1_exercises_before.ipynb
@@ -97,6 +97,55 @@
     "\n",
     "classifier.show_most_informative_features(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token: Ayer, POS: ADV, Dependency: advmod\n",
+      "Token: fui, POS: AUX, Dependency: aux\n",
+      "Token: a, POS: ADP, Dependency: mark\n",
+      "Token: comprar, POS: VERB, Dependency: ROOT\n",
+      "Token: al, POS: ADP, Dependency: case\n",
+      "Token: mercado, POS: NOUN, Dependency: obl\n",
+      "Token: y, POS: CCONJ, Dependency: cc\n",
+      "Token: me, POS: PRON, Dependency: iobj\n",
+      "Token: encontre, POS: VERB, Dependency: conj\n",
+      "Token: a, POS: ADP, Dependency: case\n",
+      "Token: mi, POS: DET, Dependency: det\n",
+      "Token: amigo, POS: NOUN, Dependency: obj\n",
+      "Token: ., POS: PUNCT, Dependency: punct\n",
+      "Entity: Ayer, Label: ORG\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load(\"es_core_news_sm\")\n",
+    "\n",
+    "text = \"Ayer fui a comprar al mercado y me encontre a mi amigo.\"\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "for token in doc:\n",
+    "    print(f\"Token: {token.text}, POS: {token.pos_}, Dependency: {token.dep_}\")\n",
+    "    \n",
+    "for ent in doc.ents:\n",
+    "    print(f\"Entity: {ent.text}, Label: {ent.label_}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
