S07 1 ex simple LM

--- a/S07_1_exercises_before.ipynb
+++ b/S07_1_exercises_before.ipynb
@@ -142,10 +142,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['language', 'models', 'are', 'interesting', '</s>', 'language', 'processing', 'is', 'fun', '</s>']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.lm import MLE\n",
+    "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
+    "\n",
+    "text = [[\"natural\", \"language\", \"processing\", \"is\", \"fun\"],\n",
+    "        [\"language\", \"models\", \"are\", \"interesting\"]]\n",
+    "\n",
+    "n = 2 \n",
+    "train_data, padded_sents = padded_everygram_pipeline(n, text)\n",
+    "\n",
+    "model = MLE(n)\n",
+    "model.fit(train_data, padded_sents)\n",
+    "\n",
+    "print(model.generate(10, random_seed=42))"
+   ]
   }
  ],
  "metadata": {
