--- a/S07_1_exercises_before.ipynb
+++ b/S07_1_exercises_before.ipynb
@@ -168,6 +168,43 @@
     "\n",
     "print(model.generate(10, random_seed=42))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity between 'king' and 'queen': 0.42202005567919104\n",
+      "Similarity between 'king' and 'man': 0.7392017865690795\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\manue\\AppData\\Local\\Temp\\ipykernel_4636\\439294940.py:9: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
+      "  print(f\"Similarity between 'king' and 'queen': {word1.similarity(word2)}\")\n",
+      "C:\\Users\\manue\\AppData\\Local\\Temp\\ipykernel_4636\\439294940.py:10: UserWarning: [W007] The model you're using has no word vectors loaded, so the result of the Doc.similarity method will be based on the tagger, parser and NER, which may not give useful similarity judgements. This may happen if you're using one of the small models, e.g. `en_core_web_sm`, which don't ship with word vectors and only use context-sensitive tensors. You can always add your own word vectors, or use one of the larger models instead if available.\n",
+      "  print(f\"Similarity between 'king' and 'man': {word1.similarity(word3)}\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "word1 = nlp(\"king\")\n",
+    "word2 = nlp(\"queen\")\n",
+    "word3 = nlp(\"man\")\n",
+    "\n",
+    "print(f\"Similarity between 'king' and 'queen': {word1.similarity(word2)}\")\n",
+    "print(f\"Similarity between 'king' and 'man': {word1.similarity(word3)}\")"
+   ]
   }
  ],
  "metadata": {
